--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/public/Logo-thumbnail-white-background.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | Trive</title>
+    <title>Vite React Bootstrap SPA</title>
   </head>
   <body>
     <div id="root"></div>
