--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite React Bootstrap SPA</title>
+    <link rel="icon" type="image/png" href="public/Logo-thumbnail-white-background.png">
+    <title>Home | TriveDev</title>
   </head>
   <body>
     <div id="root"></div>
